apps/core/hubble-route/manifests/http-route.yaml
# apps/core/hubble-route/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https-wildcard   # fixa no listener HTTPS específico
  hostnames:
    - hubble.lab.the-lab.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
